# StudentManagementSystem

StudentManagementSystem/: CMakeLists.txt  README.md  SaveToExcel.xlsx  main.cpp
StudentManagementSystem/include/: Student.hpp  UserManager.hpp
StudentManagementSystem/source/: DataManager.cpp  ShowData.cpp  Student.cpp  UI.cpp  UserManager.cpp
